erDiagram
    ROLES ||--o{ USUARIOS : "1:N"
    USUARIOS ||--o{ PERSONAS : "1:1"
    DEPARTAMENTOS ||--o{ PERSONAS : "1:N"
    DEPARTAMENTOS ||--o{ usuarios : "jefe_id"
    
    TIPOS_SOLICITUD ||--o{ SOLICITUDES : "1:N"
    SUBTIPOS_MODIFICACION ||--o{ SOLICITUDES : "1:N"
    ESTADOS_SOLICITUD ||--o{ SOLICITUDES : "1:N"
    USUARIOS ||--o{ SOLICITUDES : "usuario_solicitante_id"
    
    SOLICITUDES ||--o{ APROBACIONES : "1:N"
    USUARIOS ||--o{ APROBACIONES : "usuario_aprobador_id"
    
    SOLICITUDES ||--o{ ASIGNACIONES : "1:N"
    USUARIOS ||--o{ ASIGNACIONES : "desarrollador_id"
    
    SOLICITUDES ||--o{ ARCHIVOS_ADJUNTOS : "1:N"
    USUARIOS ||--o{ ARCHIVOS_ADJUNTOS : "usuario_cargador_id"
    
    SOLICITUDES ||--o{ NOTIFICACIONES : "1:N"
    USUARIOS ||--o{ NOTIFICACIONES : "usuario_destino_id"
    
    SOLICITUDES ||--o{ AUDITORIA_SOLICITUDES : "1:N"
    USUARIOS ||--o{ AUDITORIA_SOLICITUDES : "usuario_id"
    
    USUARIOS ||--o{ AUDITORIA_ACCESO : "1:N"

    ROLES : rol_id PK
    ROLES : nombre_rol
    ROLES : descripcion
    ROLES : permisos
    ROLES : estado

    USUARIOS : usuario_id PK
    USUARIOS : email UK
    USUARIOS : contraseña
    USUARIOS : rol_id FK
    USUARIOS : estado
    USUARIOS : ultimo_acceso

    PERSONAS : persona_id PK
    PERSONAS : usuario_id FK UK
    PERSONAS : nombre
    PERSONAS : apellido_paterno
    PERSONAS : apellido_materno
    PERSONAS : numero_empleado
    PERSONAS : departamento_id FK
    PERSONAS : puesto
    PERSONAS : telefono
    PERSONAS : extension
    PERSONAS : fotografia

    DEPARTAMENTOS : departamento_id PK
    DEPARTAMENTOS : nombre_departamento
    DEPARTAMENTOS : descripcion
    DEPARTAMENTOS : jefe_departamento_id FK
    DEPARTAMENTOS : estado

    TIPOS_SOLICITUD : tipo_id PK
    TIPOS_SOLICITUD : nombre_tipo UK
    TIPOS_SOLICITUD : descripcion
    TIPOS_SOLICITUD : prefijo_folio
    TIPOS_SOLICITUD : requiere_aprobacion

    SUBTIPOS_MODIFICACION : subtipo_id PK
    SUBTIPOS_MODIFICACION : nombre_subtipo UK
    SUBTIPOS_MODIFICACION : descripcion
    SUBTIPOS_MODIFICACION : estado

    ESTADOS_SOLICITUD : estado_id PK
    ESTADOS_SOLICITUD : nombre_estado UK
    ESTADOS_SOLICITUD : descripcion
    ESTADOS_SOLICITUD : orden
    ESTADOS_SOLICITUD : es_terminal

    SOLICITUDES : solicitud_id PK
    SOLICITUDES : folio UK
    SOLICITUDES : tipo_id FK
    SOLICITUDES : subtipo_id FK
    SOLICITUDES : state_id FK
    SOLICITUDES : usuario_solicitante_id FK
    SOLICITUDES : titulo
    SOLICITUDES : descripcion
    SOLICITUDES : prioridad
    SOLICITUDES : fecha_creacion
    SOLICITUDES : fecha_vencimiento
    SOLICITUDES : fecha_aprobacion
    SOLICITUDES : fecha_inicio_desarrollo
    SOLICITUDES : fecha_finalizacion
    SOLICITUDES : motivo_rechazo
    SOLICITUDES : estado

    APROBACIONES : aprobacion_id PK
    APROBACIONES : solicitud_id FK
    APROBACIONES : usuario_aprobador_id FK
    APROBACIONES : estado_aprobacion
    APROBACIONES : comentarios
    APROBACIONES : fecha_aprobacion

    ASIGNACIONES : asignacion_id PK
    ASIGNACIONES : solicitud_id FK
    ASIGNACIONES : desarrollador_id FK
    ASIGNACIONES : porcentaje_asignacion
    ASIGNACIONES : fecha_asignacion
    ASIGNACIONES : fecha_desasignacion
    ASIGNACIONES : estado_asignacion

    ARCHIVOS_ADJUNTOS : archivo_id PK
    ARCHIVOS_ADJUNTOS : solicitud_id FK
    ARCHIVOS_ADJUNTOS : nombre_archivo
    ARCHIVOS_ADJUNTOS : tipo_archivo
    ARCHIVOS_ADJUNTOS : ruta_almacenamiento
    ARCHIVOS_ADJUNTOS : tamaño_bytes
    ARCHIVOS_ADJUNTOS : usuario_cargador_id FK
    ARCHIVOS_ADJUNTOS : fecha_carga

    NOTIFICACIONES : notificacion_id PK
    NOTIFICACIONES : usuario_destino_id FK
    NOTIFICACIONES : titulo
    NOTIFICACIONES : mensaje
    NOTIFICACIONES : tipo
    NOTIFICACIONES : solicitud_id FK
    NOTIFICACIONES : leida
    NOTIFICACIONES : fecha_creacion
    NOTIFICACIONES : fecha_lectura

    AUDITORIA_SOLICITUDES : auditoria_id PK
    AUDITORIA_SOLICITUDES : solicitud_id FK
    AUDITORIA_SOLICITUDES : usuario_id FK
    AUDITORIA_SOLICITUDES : accion
    AUDITORIA_SOLICITUDES : campo_modificado
    AUDITORIA_SOLICITUDES : valor_anterior
    AUDITORIA_SOLICITUDES : valor_nuevo
    AUDITORIA_SOLICITUDES : fecha_evento

    AUDITORIA_ACCESO : acceso_id PK
    AUDITORIA_ACCESO : usuario_id FK
    AUDITORIA_ACCESO : tipo_acceso
    AUDITORIA_ACCESO : ip_origen
    AUDITORIA_ACCESO : user_agent
    AUDITORIA_ACCESO : exitoso
    AUDITORIA_ACCESO : fecha_acceso
